# Indra-RL-Lab

./: .gitattributes  .gitconfig  .gitignore  .readthedocs.yml  LICENSE  README.md  TRAINING_PIPELINE.md  compile_latex.pl  docker-compose-no-gpu.yml  docker-compose.yml
.devcontainer/linux/: devcontainer.json
Docker/: docker-compose-no-gpu.yml  docker-compose.yml
Docker/PLAYGROUND_HUB/: Dockerfile  dockerfile  requirements.txt
Docker/PLAYGROUND_HUB/volume/: .gitconfig  build.bash  build.py  config.yml  deploy.bash  launch_node.bash  launch_node.py  launch_ros_tcp_endpoint.bash  launch_ros_tcp_endpoint.py  ros_config.json  ros_launcher.py  test.bash  train.bash
Docker/PLAYGROUND_HUB/volume/ROS/: config.json  launch_ros_tcp_endpoint.py
Docker/PLAYGROUND_HUB/volume/ROS/src/interfaces_pkg/: CMakeLists.txt
Docker/PLAYGROUND_HUB/volume/ROS/src/interfaces_pkg/examples_pkg/msg/: AutonomousNavigationExampleAgentReset.msg  AutonomousNavigationExampleAgentState.msg  EscoPilotExampleAgentState.msg  ShootingExampleAgentAction.msg  ShootingExampleAgentState.msg
Docker/PLAYGROUND_HUB/volume/ROS/src/interfaces_pkg/examples_pkg/srv/: AutonomousNavigationExampleEnvironmentAction.srv  AutonomousNavigationExampleEnvironmentReset.srv  AutonomousNavigationExampleEnvironmentState.srv  AutonomousNavigationExampleEnvironmentStep.srv  EscoPilotExampleEnvironmentStep.srv  ShootingExampleEnvironmentReset.srv  ShootingExampleEnvironmentStep.srv
Docker/PLAYGROUND_HUB/volume/ROS/src/interfaces_pkg/msg/: AgentAction.msg  AgentState.msg  AutonomousNavigationExampleAgentAction.msg  EscoPilotExampleAgentAction.msg  LidarSensorTestAgentAction.msg  LidarTestAgentAction.msg  LidarTestAgentState.msg  PoseSensorAndActuatorTestAgentAction.msg  TriggerSensor.msg  TriggerSensorTestAgentAction.msg
Docker/PLAYGROUND_HUB/volume/ROS/src/interfaces_pkg/playground_pkg/msg/: EnemySensor.msg  HealthSensor.msg  Turret2DActuator.msg  TurretSensor.msg
Docker/PLAYGROUND_HUB/volume/ROS/src/interfaces_pkg/srv/: AutonomousNavigationExampleEnvironmentStep.srv  EnvironmentStep.srv  LidarSensorTestEnvironmentStep.srv  LidarTestEnvironmentStep.srv  PoseSensorAndActuatorTestEnvironmentStep.srv  TriggerSensorTestEnvironmentStep.srv
Docker/PLAYGROUND_HUB/volume/ROS/src/interfaces_pkg/testing_pkg/msg/: TriggerSensorTestAgentState.msg  TwistSensorAndActuatorTestAgentAction.msg
Docker/PLAYGROUND_HUB/volume/ROS/src/interfaces_pkg/testing_pkg/srv/: LidarSensorTestEnvironmentAction.srv  LidarSensorTestEnvironmentReset.srv  LidarSensorTestEnvironmentState.srv  PoseSensorAndActuatorTestEnvironmentAction.srv  PoseSensorAndActuatorTestEnvironmentState.srv  TriggerSensorTestEnvironmentAction.srv  TriggerSensorTestEnvironmentState.srv  TwistSensorAndActuatorTestEnvironmentAction.srv  TwistSensorAndActuatorTestEnvironmentState.srv
Docker/PLAYGROUND_HUB/volume/commands/: launch_unity_simulation.py
Docker/indra-rl-lab/: Dockerfile  requirements.txt
Docker/indra-rl-lab/volume/: .gitconfig  build.bash  config.yml  deploy.bash  launch_ros_tcp_endpoint.bash  test.bash  train.bash
Docker/indra-rl-lab/volume/commands/: launch_unity_simulation.py
Unity/: config.json  launch.py  launch_unity_simulation.bash  launch_unity_simulation.bat  launch_unity_simulation.py  unity_config.json  unity_launcher.py
Unity/Playground/Assets/: DroneCameraSight.cs  msgbrowser_settings.asset  urp.asset
Unity/Playground/Assets/Materials/: BlueMaterial.mat  DarkGrey.mat  DarkGreyMaterial.mat  GreenMaterial.mat  LightGrey.mat  LightGreyMaterial.mat  TransparentBlueMaterial.mat  TransparentGreen.mat  TransparentGreenMaterial.mat  TransparentRed.mat  White.mat  WhiteMaterial.mat
Unity/Playground/Assets/Prefabs/: PumpJack.prefab
Unity/Playground/Assets/Resources/: ROSConnectionPrefab.prefab
Unity/Playground/Assets/Scenes/: AutonomousNavigationExampleScene.unity  DroneScene.unity  DroneScene2.unity  LidarSensorTestScene.unity  LidarTestScene.unity  SampleScene.unity  ShootingExampleScene.unity  TriggerSensorTestScene.unity  UC1Scene.unity  UC2Scene.unity
Unity/Playground/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
Unity/Playground_old/ProjectSettings/: DynamicsManager.asset  GraphicsSettings.asset  TagManager.asset
docs/: conf.py  faq.rst  index.rst  requirements.txt
docs/DEVELOPER_GUIDE/: Customizing_environments.rst  Saving_and_loading_models.rst  Wandb_Logging.rst
docs/GETTING_STARTED/: README.rst  deployment.rst  installation.rst  testing.rst  training.rst  training_pipeline.rst
docs/PROJECT_STRUCTURE/: Docker.rst  Unity.rst
docs/UseCases/: usecase1.rst  usecase2.rst  usecase3.rst
docs/_static/css/: custom.css  styles.css
docs/_templates/: flyingmenu.html  flyoutmenu.html  footer.html  layout.html  sidebar.html
indra-rl-lab/: Dockerfile  requirements.txt
indra-rl-lab/unity/: launch_unity_simulation.bat  launch_unity_simulation.py
indra-rl-lab/volume/: config.yml  launch_ros_tcp_endpoint.bash  test.bash  train.bash
indra-rl-lab/volume/rl_pipeline/: __init__.py  algorithm_registry.py  rl_deployer.py  rl_trainer.py  schedulers.py
indra-rl-lab/volume/ros_ws/src/interfaces_pkg/: CMakeLists.txt  package.xml
indra-rl-lab/volume/ros_ws/src/interfaces_pkg/rl_pkg/msg/: HealthInfo.msg  LaserScan.msg  SmartLaserScan.msg  TriggerSensor.msg  Turret2DActuator.msg  Turret2DSensor.msg  Twist2D.msg
indra-rl-lab/volume/ros_ws/src/interfaces_pkg/use_cases/agents/: TankAction.msg  TankState.msg  TargetTankState.msg
indra-rl-lab/volume/ros_ws/src/interfaces_pkg/use_cases/bots/: BotParams.msg
indra-rl-lab/volume/ros_ws/src/interfaces_pkg/use_cases/uc1/: UC1AgentState.msg  UC1EnvironmentReset.srv  UC1EnvironmentStep.srv
indra-rl-lab/volume/ros_ws/src/interfaces_pkg/use_cases/uc2/: UC2AgentState.msg  UC2EnvironmentReset.srv  UC2EnvironmentStep.srv
indra-rl-lab/volume/ros_ws/src/interfaces_pkg/use_cases/uc3/: UC3AgentState.msg  UC3EnvironmentReset.srv  UC3EnvironmentStep.srv
unity/: launch_unity_simulation.bash  launch_unity_simulation.py
(+669 files in other folders)
